fix: fixed title overflow

--- a/src/Components/Card/card.css
+++ b/src/Components/Card/card.css
@@ -8,6 +8,7 @@
     text-align: center;
     font-weight: 700;
     font-size: 18px;
+    overflow: hidden;
 }
 .card__content {
     overflow: scroll;
@@ -18,4 +19,3 @@
     border-radius: 4px;
     background: #fff;
 }
-
